# omkalitycraft-api

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  mypy.ini  pyproject.toml  ruff.toml
scripts/: generate_manifest.py  stage_launcher_content.py
src/: app.py
src/api/: app.py
src/api/core/: project.py  storage.py
src/api/routes/: download.py  instances.py  launcher.py  meta.py
src/core/: project.py  storage.py
src/routes/: download.py  instances.py  launcher.py  meta.py
src/settings/: config.py  content.py
src/settings/instances/divinejourney2/: instance_config.json  launch_profile.json  manifest.json
src/settings/launcher/: manifest.json
