[project]
name = "omkalitycraft-api"
version = "0.1.0"
description = "CDN + API for OmkalityCraft launcher"
readme = "README.md"
requires-python = "==3.14.2"
dependencies = []

[dependency-groups]
api = [
    "granian>=2.7.0",
    "litestar>=2.19.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
]
dev = [
    "black>=26.1.0",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
